discussion/kv_engine/173507/173507_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add SnapshotRequirements and checks

RangeScans can be created with optional parameters that state a
vbucket uuid and sequence number.

This commit adds:

* in-memory uuid check on the frontend worker, failing the create
  with "not_my_vbucket"
* snapshot "must-contain" seqno check in the I/O task (optional at
  the request of the caller).

A future commit will add checks that the seqno was at least persisted
with a wait+timeout if not.

Change-Id: I5b03fadbe2cece10195ba2313e2619d11674fbfe

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-08 18:56:35.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-08 19:20:28.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19439/ : ABORTED

Test exceeded the timeout:
[2022-05-08T19:20:26.403Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19439/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19439/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20124/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20124/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18286/ : ABORTED

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/persistent_magma_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/persistent_magma_full_eviction
[2022-05-08T19:10:25.026Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:717: Failure
[2022-05-08T19:10:25.026Z] Expected equality of these values:
[2022-05-08T19:10:25.026Z]   initialNonIoTasks
[2022-05-08T19:10:25.026Z]     Which is: 1
[2022-05-08T19:10:25.026Z]   lpNonioQ.getFutureQueueSize()
[2022-05-08T19:10:25.026Z]     Which is: 2
[2022-05-08T19:10:25.026Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/persistent_magma_full_eviction, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=full_eviction" (251 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/persistent_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18286/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18286/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27496/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27496/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17338/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:20:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t vbUuid{0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:22:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t seqno{0};
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17338/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:20:5:
error: unknown type name "uint64_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17338/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38606/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45972/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16339/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6949/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7041/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19096/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
